# E-Jam

./: .gitignore  CONTRIBUTING.md  LICENSE  NodesDocumentation.md  README.md
.github/workflows/: frontend.yml
Admin Client/: -mnt-Data-!.txt  README.md
Admin Client/E-Jam-Admin-Client-Backend/: Cargo.toml  README.md
Admin Client/E-Jam-Admin-Client-Backend/src/: main.rs
Admin Client/E-Jam-Admin-Client-Backend/src/models/: mod.rs
Admin Client/E-Jam-Admin-Client-Backend/src/services/: mod.rs
Admin Client/e_jam_backend/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  logger.yml  test_cases.json  thunder-collection_E-Jam API.json
Admin Client/e_jam_backend/src/: faker.rs  main.rs
Admin Client/e_jam_backend/src/consumer/: mod.rs
Admin Client/e_jam_backend/src/faker/: mod.rs
Admin Client/e_jam_backend/src/models/: device.rs  devices.rs  mod.rs  process.rs  processes.rs  statistics.rs  stream_details.rs
Admin Client/e_jam_backend/src/services/: device.rs  devices.rs  mod.rs  pre_sets.rs  utils.rs
Admin Client/e_jam_backend/src/services/consumer/: mod.rs
Admin Client/e_jam_backend/src/services/pre_sets/: mod.rs
Admin Client/e_jam_backend/src/services/statistics/: mod.rs  query.rs
Admin Client/e_jam_backend/src/test/: mod.rs
Admin Client/e_jam_backend/tests/: E-Jam API-Tester-Loop.json  E-Jam_API_Add_Only_Test_Case.json  E-Jam_API_Test_Suite.json
Admin Client/e_jam_frontend/: README.md  pubspec.yaml
Admin Client/e_jam_frontend/android/app/: build.gradle
Admin Client/e_jam_frontend/assets/riv/: logo_loading.riv
Admin Client/e_jam_frontend/installers/: windows_installer.iss
Admin Client/e_jam_frontend/ios/Runner/: Info.plist
Admin Client/e_jam_frontend/ios/Runner.xcodeproj/: project.pbxproj
Admin Client/e_jam_frontend/lib/: main.dart
Admin Client/e_jam_frontend/linux/: CMakeLists.txt  my_application.cc
Admin Client/e_jam_frontend/macos/Runner.xcodeproj/: project.pbxproj
Admin Client/e_jam_frontend/test/: widget_test.dart
Admin Client/e_jam_frontend/web/: index.html
Admin Client/e_jam_frontend/windows/: CMakeLists.txt
Admin Client/e_jam_frontend/windows/runner/: Runner.rc  main.cpp
Admin Client/kafka_stack_docker_compose/: .goutputstream-0IF441  README.md  docker-compose.yml
Admin Client/kafka_stack_docker_compose/SystemApi/: pom.xml
Admin Client/kafka_stack_docker_compose/avro/: generators.avsc  verifiers.avsc
Documentation/Testing/Diagram/: E Jam Components Testing Diagram .vpd
Proofs of Concepts/: main.java
Proofs of Concepts/HostGroupingDemo/: CMakeLists.txt  HostGroupingDemo  HostGroupingDemo.md  device.h  devicemanager.cpp  devicemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Proofs of Concepts/IPC/: benchmarking.md
Proofs of Concepts/IPC/pipes-cpp/: CMakeLists.txt  client  client.cpp  main.cpp  server  server.cpp
Proofs of Concepts/IPC/pipes-java/src/: Client.java  Main.java  NamedPipe.java  Server.java
Proofs of Concepts/IPC/posix-cpp/: CMakeLists.txt  client  client.cpp  server  server.cpp
Proofs of Concepts/IPC/posix-java/src/: Client.java  Main.java  Server.java
Proofs of Concepts/IPC/sockets-cpp/: CMakeLists.txt  Makefile  client  client.cpp  server  server.cpp
Proofs of Concepts/NewNodeDetection/: NewNodeDetection.cpp  NewNodeDetection.md
Proofs of Concepts/ScriptingUI/: Config.txt  README.md  Scripting Vs GUI.docx
Proofs of Concepts/ScriptingUI/src/: Main.java  Parser.java
Proofs of Concepts/StoringConfigurationfiles/: StoringConfigFiles.md
Proofs of Concepts/dbBench/java/: db.txt
Proofs of Concepts/receiveEthernet/: CMakeLists.txt  README.md  main.cpp
Proofs of Concepts/sendingRawEF/: CMakeLists.txt  main.cpp
Prototype/: Makefile  Prototype.md  enterInterfaces.sh  enterServerAddress.sh
Prototype/Admin-Client-Prototype/: .gitignore  README.md
Prototype/Admin-Client-Prototype/Admin-Client-App/: README.md  license.txt  main.js  preload.js
Prototype/Admin-Client-Prototype/kafka-Docker-Container-and-Java-Producer/: CheatSheet.txt  README.md  docker-compose.yml
Prototype/Executables/: CMakeLists.txt  Gateway  Generator  GetExecutables.sh  verifier
Prototype/Gateway/: CMakeLists.txt  PacketReceiver.cpp  PacketReceiver.h  PacketSender.cpp  PacketSender.h  main.cpp
Prototype/Gateway/BuildTest/: Gateway  Makefile
Prototype/Generator/: Byte.h  CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationManager.cpp  ConfigurationManager.h  DatagramConstructor.cpp  DatagramConstructor.h  EthernetConstructor.cpp  EthernetConstructor.h  FrameConstructor.cpp  FrameConstructor.h  IPv4.h  PacketCreator.cpp  PacketCreator.h  PacketSender.cpp  PacketSender.h  PayloadGenerator.cpp  PayloadGenerator.h  RNG.cpp  RNG.h  SegmentConstructor.cpp  SegmentConstructor.h  StreamDetails.cpp  StreamDetails.h  main.cpp  rawGenerator.cpp  rawGenerator.h
Prototype/Generator/buildTest/: Generator  Makefile
Prototype/StatsManagerTester/: CMakeLists.txt  main.cpp
Prototype/SystemApi/: docker-compose.yml  pom.xml
Prototype/SystemApi/src/main/avro/: verifiers.avsc  (+1 more)
Prototype/commonHeaders/: Byte.cpp  Byte.h  Configuration.h  ConfigurationManager.cpp  ConfigurationManager.h  Mechanism of stats generation and transmission.md  RNG.cpp  RNG.h  StatsManager.cpp  StatsManager.h  UsernameGetter.cpp  UsernameGetter.h  Utils.cpp  Utils.h  xoshiro512+.cpp
Prototype/verifier/: CMakeLists.txt  main.cpp  verifier.depend  verifier.layout
Prototype/verifier/builTest/: Makefile  verifier
Prototype/verifier/include/: Byte.h  DatagramVerifier.h  FramVerifier.h  PacketUnpacker.h  PayloadVerifier.h  SegmentVerifier.h
Prototype/verifier/src/: Byte.h  Configuration.h  ConfigurationManager.cpp  ConfigurationManager.h  DatagramVerifier.cpp  DatagramVerifier.h  ErrorHandler.cpp  ErrorHandler.h  FramVerifier.cpp  FramVerifier.h  PacketReceiver.cpp  PacketReceiver.h  PacketUnpacker.cpp  PacketUnpacker.h  PayloadVerifier.cpp  PayloadVerifier.h  SegmentVerifier.cpp  SegmentVerifier.h  SeqChecker.cpp  SeqChecker.h  StatsManager.cpp  StatsManager.h  main.cpp  streamsManager.cpp  streamsManager.h
(+191 files in other folders)
