[package]
name = "e-jam-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
kafka = "0.9.0"
schema_registry_converter = { version = "3.1.0", default-features = false, features = ["avro", "blocking"] }
apache-avro = "0.14.0"
nanoid = "0.4.0"
log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4.17"
