[package]
name = "e-jam-api"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.8.1"
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
kafka = "0.9.0"
schema_registry_converter = { version = "3.1.0", default-features = false, features = ["avro", "blocking"] }
apache-avro = "0.14.0"
nanoid = "0.4.0"
log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4.17"

fake ={ version = "2.6.1", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
# Runing with fake data and a random statics generator
fake_data = ["dep:fake", "dep:rand"] 